recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:8: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:15: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:17: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:20: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^FourSquare:22: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite();
        ^