recursion.logo.square.FourSquare.scala.code
override def run() {
	avance(100);
	droite();
  avance(100);
  droite();
  avance(100);
  avance(100);
  droite();
  avance(100);
  droite();
  avance(100);
  droite();
  avance(100);
  avance(100);
  droite();
  avance(100);
  droite();
  avance(100);
  avance(100);
  droite();
  avance(100);
  droite();
  avance(100);
  
}
